[tool.poetry]
name = "poetry-shapely"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry_shapely"}]

[tool.poetry.dependencies]
python = "^3.10"
Shapely = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
